viya4/sas-bases/overlays/network/istio/components/sas-text-concepts/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-concept-taxonomy
spec:
  host: sas-concept-taxonomy
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /conceptTaxonomy/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-concepts
spec:
  host: sas-concepts
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /concepts/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-concepts
    sas.com/admin: namespace
  name: sas-concept-taxonomy
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /conceptTaxonomy
    - uri:
        prefix: /conceptTaxonomy/
    route:
    - destination:
        host: sas-concept-taxonomy
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-concepts
    sas.com/admin: namespace
  name: sas-concepts
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /concepts
    - uri:
        prefix: /concepts/
    route:
    - destination:
        host: sas-concepts
    timeout: 300s
